// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with blocks updates positions when a block is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "index": 0,
          "name": "Block",
          "vx": -89.6905742687178,
          "vy": -0.000008581367316107929,
          "x": -90.6905742687178,
          "y": -0.000008581367316107929,
        },
        Object {
          "index": 1,
          "name": "New block",
          "vx": 89.6905742687178,
          "vy": 0.000008581367316107929,
          "x": 90.6905742687178,
          "y": 0.000008581367316107929,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;

exports[`without blocks updates position when a block is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "index": 0,
          "name": "New block",
          "vx": -0.052770809931613774,
          "vy": 0,
          "x": 0.9472291900683862,
          "y": 0,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;
